feat: add module comment
